# curby

./: .gitignore  README.md  pyproject.toml
curby/: __init__.py  __main__.py  bot.py  curby_class.py  image_fetcher.py  music_class.py  music_fetcher.py  youtube_dl_source.py
